[gd_scene load_steps=7 format=3 uid="uid://hw41vsylwedj"]

[ext_resource type="Script" path="res://field.gd" id="1_s2jo0"]
[ext_resource type="Texture2D" uid="uid://qec7qdat844" path="res://bbd.jpg" id="1_ty2lo"]
[ext_resource type="Texture2D" uid="uid://07br8i0vopa3" path="res://Test.png" id="2_ehjvt"]
[ext_resource type="Script" path="res://Runner.gd" id="3_eriqd"]
[ext_resource type="Script" path="res://team_list.gd" id="5_e7l3l"]
[ext_resource type="PackedScene" uid="uid://c5fx85hndgu48" path="res://Scoreboard.tscn" id="5_g0bqe"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_s2jo0")

[node name="Field" type="Sprite2D" parent="."]
position = Vector2(575, 333.5)
scale = Vector2(0.901953, 0.926389)
texture = ExtResource("1_ty2lo")

[node name="Runner" type="Sprite2D" parent="."]
visible = false
position = Vector2(1197, 341)
scale = Vector2(0.286667, 0.28)
texture = ExtResource("2_ehjvt")
script = ExtResource("3_eriqd")

[node name="Button" type="Button" parent="."]
offset_left = 961.0
offset_top = 592.0
offset_right = 1077.0
offset_bottom = 640.0
text = "Play Ball!"

[node name="Label" type="Label" parent="."]
offset_left = 183.0
offset_top = 503.0
offset_right = 223.0
offset_bottom = 526.0

[node name="AtBatList" type="ItemList" parent="."]
offset_left = 12.0
offset_top = 405.0
offset_right = 209.0
offset_bottom = 651.0
allow_search = false
max_text_lines = 200
auto_height = true

[node name="Scoreboard" parent="." instance=ExtResource("5_g0bqe")]
position = Vector2(172, 7)

[node name="HomeTeamSpawn" type="Node2D" parent="."]
position = Vector2(662, 526)

[node name="AwayTeamSpawn" type="Node2D" parent="."]
position = Vector2(496, 526)

[node name="StartGameButton" type="Button" parent="."]
offset_left = 950.0
offset_top = 525.0
offset_right = 1081.0
offset_bottom = 584.0
text = "Start Game"

[node name="TeamSelect" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AwayTeamLabel" type="Label" parent="TeamSelect"]
layout_mode = 2
offset_left = 1016.0
offset_top = 16.0
offset_right = 1110.0
offset_bottom = 39.0
text = "Away Team"

[node name="HomeTeamLabel" type="Label" parent="TeamSelect"]
layout_mode = 2
offset_left = 861.0
offset_top = 17.0
offset_right = 955.0
offset_bottom = 40.0
text = "Home Team"

[node name="HomeTeamSelect" type="ItemList" parent="TeamSelect"]
layout_mode = 2
offset_left = 834.0
offset_top = 43.0
offset_right = 979.0
offset_bottom = 220.0
allow_reselect = true
max_text_lines = 200
auto_height = true
script = ExtResource("5_e7l3l")

[node name="AwayTeamSelect" type="ItemList" parent="TeamSelect"]
layout_mode = 2
offset_left = 994.0
offset_top = 41.0
offset_right = 1138.0
offset_bottom = 219.0
allow_reselect = true
max_text_lines = 200
auto_height = true
script = ExtResource("5_e7l3l")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="Label" to="Runner" method="_on_label_gui_input"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_start_game_button_pressed"]
